2010-01-12  David Bateman  <dbateman@free.fr>

	* graphics.h.in (patch::properties): Add "flat" value to
	markeredgecolor and  markerfacecolor properties.

2010-01-12  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base.h (builtin_type_t): New enum constants: btyp_cell,
	btyp_struct and btyp_func_handle.
	(btyp_isinteger, btyp_isfloat, btyp_isarray): New funcs.
	(btyp_class_name): New array.
	(get_builtin_classes): New func.
	* ov-cell.h (octave_cell::builtin_type): New virtual override.
	* ov-struct.h (octave_struct::builtin_type): New virtual override.
	* ov-fcn-handle.h (octave_fcn_handle::builtin_type): New virtual override.
	* symtab.cc (get_dispatch_type): Rewrite. Add overload.
	* symtab.h: Update decls.
	* ov-fcn-handle.cc (octave_fcn_handle::do_multi_index_op): Rewrite.
	(get_builtin_classes): Remove.

2010-01-12  Jaroslav Hajek  <highegg@gmail.com>

	* oct-obj.cc (octave_value_list::any_cell): New method.
	* oct-obj.h: Declare it.
	* utils.cc (do_simple_cellfun): New overloaded function.
	* utils.h: Declare it.
	* DLD-FUNCTIONS/strfind.cc (Fstrfind): Call it here.
	(Fstrrep): Also here.

2010-01-11  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Update DOCSTRINGS rules to avoid simple_move_if_change_rule
	and allow Make to update timestamps.

2010-01-11  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/urlwrite.cc (curl_handle::lasterror):
	Avoid using errno as a local variable name.

2010-01-11  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/lu.cc (Fluupdate): Add tests for LU updating.

2010-01-11  Tatsuro MATSUOKA  <tmacchant@yahoo.co.jp>

	* Makefile.am (OCTINTERP_LINK_DEPS): Include FT2_LDFLAGS and
	FT2_LIBS in the list.

2010-01-09  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/lookup.cc (stri_comp_lt, stri_comp_gt):
	Comment out unused functions.

	* oct-stream.cc (BEGIN_S_CONVERSION): Don't declare local tmp
	variable twice.

	* gl-render.cc (opengl_renderer::draw_image): Avoid shadow
	declaration warning from GCC.
